crates/wgso/tests/cases_invalid/invalid_priority/.expected
error: expected `i32` value
 --> ./tests/cases_invalid/invalid_priority/root.wgsl:1:6
  |
1 | #run<9999999999999> shader()
  |      ^^^^^^^^^^^^^
  |